--- a/templates/patients/employee_list_2.html
+++ b/templates/patients/employee_list_2.html
@@ -4,7 +4,9 @@
 	<td>{{ dtls.name }}</td>
 	<td>{{ dtls.gender }}</td>
 	<td>{{ dtls.blood_group }}</td>
-	<td><a href="{{ MEDIA_URL }}{{ dtls.photo.name }}" target="_blank"><img class="img-profile rounded-circle" src="{{ MEDIA_URL }}{{ dtls.photo.name }}" width="50" height="50"/></a></td>
+	{% if dtls.photo.name %}
+	<td><a href="/media/{{ dtls.photo.name }}" target="_blank"><img class="img-profile rounded-circle" src="/media/{{ dtls.photo.name }}" width="50" height="50"/></a></td>
+	{% endif %}
 	<td>{{ dtls.address }} {{ dtls.email_id }} {{ dtls.telephone_line1 }}</td>
 	<td>{{ dtls.joining_date}}</td>
 	<td>{{ dtls.role }}</td>
@@ -15,7 +17,7 @@
 		</button>
 		<button class="btn btn-danger show-form-delete" data-url="{% url 'employee_delete' dtls.id %}">
 			<i class="fa fa-trash" aria-hidden="true"></i>
-			Delete 
+			Delete
 		</button>	
 	</td>
 </tr>
